Contrast fix

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -600,7 +600,7 @@ form label.radioMembership input[type=radio] {
 form input.submitBtn {
    border: none;
    background-color: var(--green);
-   color: white;
+   color: Black;
    font-size: 1.5rem;
    border-radius: 1rem;
    padding: .75rem 1.5rem;
